syntax = "proto3";

package micro.super.lightning.service.session_mgr;

service Session_mgr {
	rpc GetSession(Request) returns (Response) {}
	rpc SaveSession(Session) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
  string SessionId = 1;
}

message Session {
  string SessionId = 1;
  bytes  SessionData = 2;
}

message Response {
    string Errno = 1;
    string Errmsg = 2;
    string Data = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
